[gd_scene load_steps=6 format=3 uid="uid://pbc17eeutgje"]

[ext_resource type="Script" path="res://Scenes/Console.gd" id="1_xklyf"]
[ext_resource type="Script" path="res://Editor/EditorCamera.cs" id="3_2uq8m"]
[ext_resource type="Script" path="res://Editor/Editor.gd" id="3_bo8wn"]
[ext_resource type="TileSet" uid="uid://bfuqtumyjeq0m" path="res://Ship/WallTileMap.tres" id="4_kyc86"]
[ext_resource type="TileSet" uid="uid://c5j4fanlmf5kc" path="res://Ship/ObjectTileMap.tres" id="5_lwkoj"]

[node name="Editor" type="Node2D"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Save" type="Button" parent="HUD"]
offset_left = 1006.0
offset_top = 19.0
offset_right = 1050.0
offset_bottom = 50.0
text = "Save"
metadata/_edit_use_anchors_ = true

[node name="Load" type="Button" parent="HUD"]
offset_left = 1085.0
offset_top = 19.0
offset_right = 1131.0
offset_bottom = 50.0
text = "Load
"
metadata/_edit_use_anchors_ = true

[node name="ConsoleLog" type="Label" parent="HUD"]
offset_right = 322.0
offset_bottom = 190.0
vertical_alignment = 2
clip_text = true
script = ExtResource("1_xklyf")
metadata/_edit_use_anchors_ = true

[node name="ToolPreview" type="Sprite2D" parent="HUD"]
position = Vector2(70, 578)
scale = Vector2(100, 100)

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_2uq8m")

[node name="Ship" type="Node2D" parent="."]
script = ExtResource("3_bo8wn")

[node name="WallTileMap" type="TileMap" parent="Ship"]
tile_set = ExtResource("4_kyc86")
format = 2
layer_0/tile_data = PackedInt32Array(-327688, 196608, 3, -262152, 131072, 0, -196616, 131072, 0, -131080, 131072, 0, -65544, 131072, 0, -8, 131072, 0, 65528, 65536, 1, 131064, 131072, 0, 196600, 131072, 0, 262136, 131072, 0, 327672, 131072, 0, 393208, 131072, 0, 458744, 65536, 3, 458745, 196608, 1, 458746, 196608, 1, 458747, 196608, 1, 458748, 65536, 4, 458749, 196608, 1, 458750, 196608, 1, 458751, 131072, 2, 393216, 196608, 1, 393217, 196608, 1, 393218, 196608, 1, 393219, 65536, 4, 393220, 196608, 1, 393221, 196608, 1, 393222, 65536, 196611, 327686, 131072, 0, 262150, 131072, 0, 196614, 131072, 0, 131078, 131072, 0, 6, 65536, 65537, -65530, 131072, 0, -131066, 131072, 0, -327674, 131072, 0, -393210, 196608, 262147, -393211, 196608, 1, -393212, 196608, 1, -393213, 196608, 1, -393214, 196608, 1, -393215, 196608, 1, -393216, 196608, 1, -327681, 262144, 0, -327682, 196608, 1, -327683, 196608, 1, -327684, 196608, 1, -327685, 196608, 1, -327686, 196608, 1, -327687, 196608, 1, -262138, 131072, 0, -196602, 131072, 0, -262145, 131072, 0, -196609, 131072, 0, -131073, 131072, 0, -65537, 196608, 4, -1, 131072, 0, 65535, 131072, 1, 196607, 131072, 0, 262143, 196608, 4, 327679, 131072, 0, 393215, 131072, 0, 65529, 196608, 1, 65530, 196608, 1, 65531, 196608, 1, 65532, 65536, 4, 5, 196608, 1, 4, 196608, 1, 3, 65536, 4, 2, 196608, 1, 1, 196608, 1, 0, 196608, 1, 65534, 196608, 1, 65533, 196608, 1, 65542, 131072, 0, 131071, 131072, 0, 327676, 0, 0, 262140, 0, 0, 196604, 0, 0, 131068, 0, 0, 131067, 0, 0, 131066, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 0, 0, 327673, 0, 0, 393209, 0, 0, 393210, 0, 0, 327674, 0, 0, 262138, 0, 0, 196602, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 327677, 0, 0, 262141, 0, 0, 196605, 0, 0, 131069, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 131076, 0, 0, 65540, 0, 0, 65539, 0, 0, 65538, 0, 0, 65537, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 327681, 0, 0, 262145, 0, 0, 196609, 0, 0, 131073, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 327683, 0, 0, 262147, 0, 0, 196611, 0, 0, 131075, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 327685, 0, 0, 262149, 0, 0, 196613, 0, 0, 131077, 0, 0, 65541, 0, 0, -131070, 0, 0, -196606, 0, 0, -262142, 0, 0, -327678, 0, 0, -327679, 0, 0, -327680, 0, 0, -262144, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, -65535, 0, 0, -131071, 0, 0, -196607, 0, 0, -262143, 0, 0, -65534, 0, 0, -65533, 0, 0, -131069, 0, 0, -196605, 0, 0, -262141, 0, 0, -327677, 0, 0, -327676, 0, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, -65531, 0, 0, -131067, 0, 0, -196603, 0, 0, -262139, 0, 0, -327675, 0, 0, -131076, 0, 0, -196612, 0, 0, -262148, 0, 0, -262149, 0, 0, -262150, 0, 0, -262151, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 0, 0, -6, 0, 0, -65542, 0, 0, -131078, 0, 0, -196614, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 0, 0, -4, 0, 0, -65540, 0, 0, -65539, 0, 0, -131075, 0, 0, -196611, 0, 0, -262147, 0, 0, -262146, 0, 0, -196610, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, -3, 0, 0)

[node name="ObjectTileMap" type="TileMap" parent="Ship"]
tile_set = ExtResource("5_lwkoj")
format = 2
layer_0/tile_data = PackedInt32Array(720892, 131072, 0)

[connection signal="pressed" from="HUD/Save" to="Ship" method="_on_save_pressed"]
[connection signal="pressed" from="HUD/Load" to="Ship" method="_on_load_pressed"]
